# bcontrolpy

./: .gitignore  README.md  pyproject.toml
bcontrolpy/src/bcontrolpy.egg-info/: PKG-INFO  SOURCES.txt
example/: example.py
src/bcontrolpy/: bcontrolpy.py  key_mapping.py
src/bcontrolpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bcontrol.py
