[build-system]
requires = ["setuptools>=58.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "bcontrolpy"
version = "0.0.5"
description = "Python Modul zur Steuerung eines B-Control Webinterface"
authors = [
    { name = "ITTV-tools", email = "ITTV-tools@users.noreply.github.com" }
]
license = { text = "Apache License" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "aiohttp>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]